[project]
name = "rhos-ls-mcps"
version = "0.1.0"
description = "MCP Tools for RHOS-Lightspeed"
authors = [
    {name = "Gorka Eguileor", email = "geguileo@redhat.com"},
]
dependencies = [
    "mcp>=1.25.0",
    "openstackclient==4.0.0",
    "stevedore>=5.6.0",
    "pydantic>=2.12.5",
    "kubernetes>=35.0.0",
    # To ensure it includes patch https://review.opendev.org/c/openstack/osc-lib/+/975784
    "python-openstackclient>=9.0.0"
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "Apache-2.0"}

[dependency-groups]
dev = [
    "cliff>=4.14.0",
    "ruff>=0.15.14",
    "pre-commit>=4.6.0"
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[project.scripts]
rhos-ls-mcps = "rhos_ls_mcps.main:main"

[tool.ruff.lint]
extend-select = ["S"]
